Update: Modifications to a news article and some styling improvements.
I found some good things about the Librem5 phone and this amends my review adding notes in this regard.

I tried to avoid having class="p" but now that I need specific styling I am using it.
I intend to completely avoid any CSS styling on the elements themselves and instead only use class names.
This has an unfortunate consequence of using a few more characters per tag.

A special subsection box class is provided for any note worth updates to news articles.

--- a/access_denied.html
+++ b/access_denied.html
@@ -73,7 +73,7 @@
           </header>
 
           <div class="main-content">
-            <p>
+            <p class="p">
               You are not authorized to access this page whether it exists or not. Please go back or <a href="index.html" class="nav-text link">consider visiting to the site index page</a>.
             </p>
           </div>
