--- a/distributions.html
+++ b/distributions.html
@@ -97,13 +97,13 @@
               <h2 class="article-title h h2">Turtle Kevux</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 Turtle Kevux is a Linux system primarily based on GNU software, <abbr title="Featureless Linux Library">FLL</abbr> software, and a Linux kernel. Historically Turtle Kevux was compiled using <a href="https://uclibc.org/" class="link external">uClibc</a> as an alternative to <a href="https://www.gnu.org/software/libc/" class="link external">GLibc</a>. Turtle Kevux now uses <a href="https://musl.libc.org/" class="link external">Musl-Libc</a> in place of <a href="https://www.gnu.org/software/libc/" class="link external">GLibc</a>.
               </p>
-              <p>
+              <p class="p">
                 This Linux based distribution deviates from Linux and even utilizes modifications to the Linux kernel. Turtle Kevux does not comply with many of the standards that many Linux distributions follow. This is especially true when it comes to SystemD as many parts of the SystemD design is the direct opposite of how Turtle Kevux and its underlying software (<abbr title="Featureless Linux Library">FLL</abbr>) are designed.
               </p>
-              <p>
+              <p class="p">
                 Turtle Kevux is neither <abbr title="Filesystem Hierarchy Standard">FHS</abbr> nor <abbr title="Linux Standard Base ">LSB</abbr> compliant, which is seen as one of the many security enhancements. Turtle Kevux might closely follow these standards, but those standards are deviated from as desired.
               </p>
             </div>
@@ -114,10 +114,10 @@
               <h2 class="article-title h h2">About Releases and Scripts</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 The Turtle Kevux Releases used to provide multiple CD-ROM and DVD-ROMs for different purposes. These have been reduced to the "everything" releases for the older Turtle Kevux releases (0.9.5 and earlier). The "everything" release contains all of the software specially configured to compile and install onto the system as well as all source code archives.
               </p>
-              <p>
+              <p class="p">
                 The Turtle Kevux Installation Scripts are also provided separately from the DVD-ROMs. These scripts can be used to compile the system entirely from source. Due to the complexity and potential problems with compiling entirely from source, the pre-compiled bootstrap files are also made available as the "tools" downloads.
               </p>
             </div>
