--- a/documentation.html
+++ b/documentation.html
@@ -147,7 +147,7 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 Documentation for the following projects are provided within their own sub-pages.
               </p>
               <div class="grid wide expand columns-4">
@@ -186,10 +186,10 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 Projects like the Featureless Linux Library are focused entirely around provided standards for every aspect of the project. Numerous specifications are available describing these standards. At this time, the specifications have not been transcribed into a format for the web. They are stored in plain text within the source code repositories.
               </p>
-              <p>
+              <p class="p">
                 Many of these specifications may be found here:
               </p>
               <ul>
@@ -208,10 +208,10 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 The <abbr title="Application Programming Interface">API</abbr>s have not yet been generated and are not available in an easy to consume form outside of the source code itself.
               </p>
-              <p>
+              <p class="p">
                 The <abbr title="Application Programming Interface">API</abbr> can be viewed by navigating the source code for the <abbr title="Featureless Linux Library">FLL</abbr> here:
               </p>
               <ul>
@@ -226,7 +226,7 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 One of the biggest problems with an <abbr title="Application Programming Interface">API</abbr> is the mis-use or misunderstanding of the meaning and purpose of one. The term itself is not the most accurate and is also not ideal. A more appropriate term would be a <strong>Library Interface</strong> or a <strong>Software Interface</strong>.
               </p>
 
@@ -236,7 +236,7 @@
                 </header>
 
                 <div class="section-content">
-                  <p>
+                  <p class="p">
                     A set of rules and guidelines.
                   </p>
                 </div>
@@ -247,7 +247,7 @@
                   <h3 class="section-title h h3">Specification</h3>
                 </header>
                 <div class="section-content">
-                  <p>
+                  <p class="p">
                     A specific interpretation, clarification, or description of a Standard, such as the documentation that describes how to use or follow a Standard.
                   </p>
                 </div>
@@ -258,7 +258,7 @@
                   <h3 class="section-title h h3">Implementation</h3>
                 </header>
                 <div class="section-content">
-                  <p>
+                  <p class="p">
                     The applying of some Standard or Specification.
                   </p>
                 </div>
@@ -269,7 +269,7 @@
                   <h3 class="section-title h h3">Application Programming Interface (API)</h3>
                 </header>
                 <div class="section-content">
-                  <p>
+                  <p class="p">
                     The <abbr title="Application Programming Interface">API</abbr> term is commonly mis-represented as Services or Protocols (such as "Web API"). An <abbr title="Application Programming Interface">API</abbr> instructs a programmer how to use a dependency when programming some software that utilizes said dependency. An <abbr title="Application Programming Interface">API</abbr> is a Specification of some Implementation of a Standard be it a formally defined standard or an informally defined standard. An <abbr title="Application Programming Interface">API</abbr> may be an Implementation of a Standard or a part of an Implementation of a Standard. An <abbr title="Application Programming Interface">API</abbr> is, in effect, documentation.
                   </p>
                 </div>
@@ -280,7 +280,7 @@
                   <h3 class="section-title h h3">Application Binary Interface (ABI)</h3>
                 </header>
                 <div class="section-content">
-                  <p>
+                  <p class="p">
                     The <abbr title="Application Binary Interface">ABI</abbr> term refers to an Application Binary Interface and represents the compiled implementation of some <abbr title="Application Programming Interface">API</abbr>. An <abbr title="Application Binary Interface">ABI</abbr> may not always exist for some <abbr title="Application Programming Interface">API</abbr>, such as for pure scripting languages. An <abbr title="Application Binary Interface">ABI</abbr> is neither a Specification nor a Standard. An <abbr title="Application Binary Interface">ABI</abbr> is an Implementation of an <abbr title="Application Programming Interface">API</abbr> making it an Implementation of a Standard or Specification.
                   </p>
                 </div>
@@ -291,7 +291,7 @@
                   <h3 class="section-title h h3">Service</h3>
                 </header>
                 <div class="section-content">
-                  <p>
+                  <p class="p">
                     Any action or labor performed by one party for another party (such as one person helping another person).
                   </p>
                 </div>
@@ -302,7 +302,7 @@
                   <h3 class="section-title h h3">Protocol</h3>
                 </header>
                 <div class="section-content">
-                  <p>
+                  <p class="p">
                     In the context of computers and software, this is a Standard focused on communication between two parties (often referring to Internet communication).
                   </p>
                 </div>
