--- a/documentation/fss_basic_list_read.html
+++ b/documentation/fss_basic_list_read.html
@@ -89,13 +89,13 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 The <strong>fss_basic_list_read</strong> program is a tool for reading and processing strings that follow the FSS-0002 (Basic List) standard.
               </p>
-              <p>
+              <p class="p">
                 This tool is designed to be scriptable and accepts piped input, treating the piped input as a file being read.
               </p>
-              <p>
+              <p class="p">
                 This tool shares parameters between with the other <abbr title="Featureless Settings Specification">FSS</abbr> Read and Write programs to make scripting consistent across the <abbr title="Featureless Settings Specification">FSS</abbr> Read and Write programs even if any given program neither needs nor uses the parameter.
               </p>
             </div>
@@ -166,10 +166,10 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
-              <p>
+              <p class="p">
                 The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
@@ -265,16 +265,16 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 All numeric positions (indexes) start at 0 instead of 1.
               </p>
-              <p>
+              <p class="p">
                 For example, a file of 17 lines would range from 0 to 16.
               </p>
-              <p>
+              <p class="p">
                 When using the <code class="code">--depth</code> option, an order of operations is enforced on the parameters.
               </p>
-              <p>
+              <p class="p">
                 When this order of operations is in effect, parameters to the right of a depth parameter are influenced by that depth parameter:
               </p>
               <dl class="dl">
@@ -288,47 +288,47 @@
                   <dt class="dt"><code class="code"><code class="code">--name</code></code></dt><dd class="dd">An Object name at the specified depth.</dd>
                 </div>
               </dl>
-              <p>
+              <p class="p">
                 The parameter <code class="code">--depth</code> must be in numeric order, but values in between may be skipped.
               </p>
               <ul>
                 <li>('-d 0 -a 1 -d 2 -a 2' would specify index 1 at depth 0, any index at depth 1, and index 2 at depth 2.)</li>
                 <li>('-d 2 -a 1 -d 0 -a 2' would be invalid because depth 2 is before depth 1.)</li>
               </ul>
-              <p>
+              <p class="p">
                 The parameter <code class="code">--select</code> selects a Content column.
               </p>
-              <p>
+              <p class="p">
                 Specify both <code class="code">--object</code> and the --total parameters to get the total objects.
               </p>
-              <p>
+              <p class="p">
                 When both <code class="code">--at</code> and <code class="code">--name</code> parameters are specified (at the same depth), the <code class="code">--at</code> parameter value will be treated as a position relative to the specified <code class="code">--name</code> parameter value.
               </p>
-              <p>
+              <p class="p">
                 This program may support parameters, such as <code class="code">--depth</code> or <code class="code">--select</code>, even if not supported by the standard.
               </p>
-              <p>
+              <p class="p">
                 This is done to help ensure consistency for scripting.
               </p>
-              <p>
+              <p class="p">
                 For parameters like <code class="code">--depth</code>, if the standard doesn't support nested Content, then only a depth of 0 would be valid.
               </p>
-              <p>
+              <p class="p">
                 For parameters like <code class="code">--select</code>, if the standard doesn't support multiple Content groups, then only a select of 0 would be valid.
               </p>
-              <p>
+              <p class="p">
                 The parameter <code class="code">--trim</code> will remove leading and trailing white spaces when selecting objects or when printing objects.
               </p>
-              <p>
+              <p class="p">
                 When specifying both the <code class="code">--object</code> parameter and the <code class="code">--content</code> parameter, the entire Object and Content are printed, including the formatting.
               </p>
-              <p>
+              <p class="p">
                 Both the Object and Content printed are already escaped.
               </p>
-              <p>
+              <p class="p">
                 Both the Object and Content are separated by a New Line character '<kbd>\n</kbd>' (U+000A).
               </p>
-              <p>
+              <p class="p">
                 The parameter <code class="code">--delimit</code> accepts the following:
               </p>
               <dl class="dl">
@@ -351,19 +351,19 @@
                   <dt class="dt">A number, zero or lesser, followed by a -</dt><dd class="dd">(such as '1-') apply delimits for Content at the specified depth and any lesser depth (numerically).</dd>
                 </div>
               </dl>
-              <p>
+              <p class="p">
                 The <code class="code">--delimit</code> parameter may be specified multiple times to customize the delimit behavior.
               </p>
-              <p>
+              <p class="p">
                 The <code class="code">--delimit</code> values none and all, overrule all other delimit values.
               </p>
-              <p>
+              <p class="p">
                 The parameters <code class="code">--columns</code> and <code class="code">--select</code> refer to a Content column.
               </p>
-              <p>
+              <p class="p">
                 The word "<em>column</em>" is being loosely defined to refer to a specific Content.
               </p>
-              <p>
+              <p class="p">
                 This is not to be confused with a depth.
               </p>
             </div>
