--- a/documentation/iki_write.html
+++ b/documentation/iki_write.html
@@ -89,10 +89,10 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 The <strong>iki_write</strong> program is a tool for generating strings that follow the IKI standard, specifically the IKI-0000 (Unrestricted) standard.
               </p>
-              <p>
+              <p class="p">
                 This tool is designed to be scriptable and accepts piped input using a special format.
               </p>
             </div>
@@ -163,10 +163,10 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
-              <p>
+              <p class="p">
                 The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
@@ -217,7 +217,7 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 This special piped input format uses the <abbr title="American Standard Code for Information Interchange">ASCII</abbr> form-feed character '<kbd>\f</kbd>' (U+000C) as a separator.
               </p>
             </div>
