--- a/fll.html
+++ b/fll.html
@@ -80,10 +80,10 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 The Featureless Linux Library is a collection of standards, specifications, and software for providing a suite of Linux focused functionality. One of the main goal is to play on the word "feature" and provide a featureless library. That is, a library that is not always changing and being rewritten breaking API and ABI to introduce features. How this is achieved and to what extend this is achieved and followed is to be described in the documentation and specifications.
               </p>
-              <p>
+              <p class="p">
                 The project can be found in three locations.
               </p>
               <ol>
@@ -91,10 +91,10 @@
                 <li><a href="https://github.com/thekevinday/fll/" class="link external">Github</a></li>
                 <li><a href="https://gitlab.com/kevuxer/fll/" class="link external">Gitlab</a></li>
               </ol>
-              <p>
+              <p class="p">
                 The source code contains the plain text documentation describing the projects and specifications describing the standards. This website will be updated to present this material.
               </p>
-              <p>
+              <p class="p">
                 In addition to being a library, the <abbr title="Featureless Linux Library">FLL</abbr> also provides several programs. Some programs, such as Featureless Make (a build system similar to GNU Make), are forever part of the <abbr title="Featureless Linux Library">FLL</abbr>. Other programs, such as the Controller program, will eventually bud off into their own project space.
               </p>
             </div>
@@ -105,7 +105,7 @@
               <h2 class="article-title h h2">Current Release</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 The current stable release series of <abbr title="Featureless Linux Library">FLL</abbr> is <strong>0.6</strong>. At this time, the official stable release for the <strong>0.6</strong> series is not yet released but a release candidate is already out. The release candidate is version <strong>0.5.9</strong>.
               </p>
             </div>
