--- a/licenses.html
+++ b/licenses.html
@@ -86,16 +86,16 @@
               <h2 class="article-title h h2">Website Licenses</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 There are multiple licenses for content on this website and content served from this website (such as a Distribution). The website documentation covers only the parts of the website that are not already under an existing license. The specifications are under a different license. All files, be they binaries or text files, provided by the distributions have their own licenses. The Featureless Linux Library and all files provided along with it have their own licenses. Documentation associated with each of these projects are under a different license as defined by their associated project.
               </p>
-              <p>
+              <p class="p">
                 Everything else on this website, such as this news blog, that is content is under <abbr title="Creative Commons Attribution Share Alike 4.0 International">CC By SA 4.0</abbr> license.
               </p>
-              <p>
+              <p class="p">
                 Everything else on this website that is source code, including <abbr title="Hyper Text Markup Language">HTML</abbr> markup, <abbr title="Cascading Style Sheets">CSS</abbr>, and Javascript, is under <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license.
               </p>
-              <p>
+              <p class="p">
                 © 2022 Kevin Day
               </p>
             </div>
@@ -106,10 +106,10 @@
               <h2 class="article-title h h2">Kevux Distribution Licenses</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 There is currently only a single Kevux distribution, called Turtle Kevux. This distribution is a collection of numerous software projects and their related files. Each of these is under their own respective license, which is provided with their respective source code. The Kevux-specific code, such as the Turtle Kevux Installation Scripts is under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license. The <abbr title="Turtle Kevux Installation Scripts">TKIS</abbr> also heavily utilizes the Featureless Make system as well as numerous Featureless Settings Specification processing programs that are also under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license.
               </p>
-              <p>
+              <p class="p">
                 Each project is copyrighted by their respective authors. The Kevux Distribution specific files are copyrighted by Kevin Day.
               </p>
             </div>
@@ -120,12 +120,12 @@
               <h2 class="article-title h h2">Featureless Linux Library Licenses</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 The <abbr title="Featureless Linux Library">FLL</abbr> source code is © 2007-2022 Kevin Day under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr> license.
               </p>
-              <p>
+              <p class="p">
                 The <abbr title="Featureless Linux Library">FLL</abbr> standards and specifications are © 2007-2022 Kevin Day under the <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr>. The <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr> is under active development and may be of a lesser version, such as 0.5. For simplicity, these are being referred to as 1.0 as the goal and intent of the license grant is for version 1 or greater. Therefore any version less than 1 is implicitly assumed to be of version 1 or greater.
-              <p>
+              <p class="p">
                 Documentation contained within the <abbr title="Featureless Linux Library">FLL</abbr> that is not under a specification license is © 2007-2022 Kevin Day under the <abbr title="Creative Commons Attribution Share Alike 4.0 International">CC By SA 4.0</abbr>.
               </p>
             </div>
@@ -136,7 +136,7 @@
               <h2 class="article-title h h2">Individual Projects Licenses</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 All of the projects listed on the Projects pages are either part of the <abbr title="Featureless Linux Library">FLL</abbr> or are based on the <abbr title="Featureless Linux Library">FLL</abbr>. As a result they are © 2007-2022 Kevin Day under the <abbr title="GNU Lesser General Public License version 2.1 or greater">LGPLv2.1+</abbr>.
               </p>
             </div>
@@ -147,10 +147,10 @@
               <h2 class="article-title h h2">Documentation Licenses</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 Documentation that is used to described specifications (included Application Programming Interfaces) are © 2007-2022 Kevin Day under the <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr>.
               </p>
-              <p>
+              <p class="p">
                 ALl remaining documentation that does not fall under the <abbr title="Open Standard License version 1 or greater">OSLv1+</abbr> are © 2007-2022 Kevin Day under the <abbr title="Creative Commons Attribution Share Alike 4.0 International">CC By SA 4.0</abbr>.
               </p>
             </div>
