--- a/news.html
+++ b/news.html
@@ -93,19 +93,19 @@
 
             <div class="article-content" id="2022_06_04-librem_to_freedom">
               <img src="images/news/2022_06_04/00-side_by_side-400.png" alt="OpenMoko FreeRuner, Ubuntu Aquaris E4.5, Pinephone Postmarket Edition, and Librem5 phones." title="Linux phones." class="image content title">
-              <p>
+              <p class="p">
                 I am a hacker, a tinkerer, one who likes to modify things into what I desire. I don't want somebody to do anything for me. I want to do anything for myself. While this does not mean I want to do everything, this does mean that want I want to do, I am the one to do it. In this case, I want to tweak and configure and use my phone as I see fit. Open-source gives me the opportunity to review, vet, and configure my computers as I see fit. Liberty such as this is the air that fills my lungs as I sleep at night, dreaming.
               </p>
-              <p>
+              <p class="p">
                 When I first discovered I could have a phone that respects my freedom, my privacy, and my liberty, I was ecstatic. I don't have to be weigh down by horrible interfaces, horrible software, and horrible flexibility that other people like or otherwise think is a good idea. I would have the opportunity to tweak and adjust the ideas as I see fit within my own personal tolerances and willingness to put the effort in.
               </p>
-              <p>
+              <p class="p">
                 I supported several phones over years, such as the <strong>OpenMoko Freerunner</strong>, an embarrassing failure in the community to the leap forward pioneered by the <strong>Unbuntu Aquaris</strong>. Many of these phones ultimately failed or faded into the night due to a hostile industry, market, and regulations. The <strong>Librem5</strong> from <a href="https://puri.sm/" class="link external">Purism</a> has now stepped up to the plate, learned from the past mistakes, and delivered a phone that, while not complete or ideal, lives up to their standards and has thus far survived numerous, and blatant, hostile industry actions and economic disasters.
               </p>
-              <p>
+              <p class="p">
                 I finally have my <strong>Librem5</strong>. I have had to quite painfully, if not patiently, wait for my phone to actually be shipped years late (due to global economic situations). This is my review after having used the phone with respect to the other open-source phones I have used, namely the <strong>Pinephone</strong> from <a href="https://www.pine64.org/" class="link external">Pine64</a>. I have discovered good things, bad things, horrible things, and great things about this phone.
               </p>
-              <p>
+              <p class="p">
                 <a href="news/2022_06_04-librem_to_freedom.html" class="content link">Continue reading…</a>
               </p>
             </div>
@@ -117,13 +117,13 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 Updated the <abbr title="Featureless Linux Library">FLL</abbr> specifications and made them available on the website.
               </p>
-              <p>
+              <p class="p">
                 Basic styling is applied to make the specifications reasonably readable on a website. I avoided doing any complicated designs so that I can focus on other tasks (such as making a stable release). I took a shortcut on the example results by using the <code class="code">&lt;pre&gt;</code> tag.
               </p>
-              <p>
+              <p class="p">
                 <a href="news/2022_05_16-fll_specifications_added.html" class="content link">Continue reading…</a>
               </p>
             </div>
@@ -135,13 +135,13 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 Update the website, bringing in my initial pass at the documentation for each of the programs provided by the <abbr title="Featureless Linux Library">FLL</abbr> project. Most of this documentation is copied from the help of each program and any improvements or deviations are incidental.
               </p>
-              <p>
+              <p class="p">
                 While working on the documentation, I discovered and fixed random problems. In particular, the <strong>iki_read</strong> program in the release candidate has a major regression where it doesn't do anything. This is the result of a very minor mistake in passing the wrong size variable to the file read functions. Essentially, the <strong>iki_read</strong> program is only processing files of length 0 and as a result never produces any output. This is now fixed upstream and I am even happier with the practice of using release candidates.
               </p>
-              <p>
+              <p class="p">
                 <a href="news/2022_05_06-basic_program_documentation.html" class="content link">Continue reading…</a>
               </p>
             </div>
@@ -153,13 +153,13 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 With a stable release of the Featureless Linux Library around the corner and the resuming of development of the Turtle Kevux Distribution, it is now time to refresh the website.
               </p>
-              <p>
+              <p class="p">
                The available functionality in the HTML standard has changed a decent amount since this website was last updated. This new design focuses on a very primitive look and feel utilizing a lot of the built in visual tools available to the <abbr title="Hyper Text Markup Language version 5">HTML5</abbr> and <abbr title="Cascading Style Sheets version 3">CSS3</abbr> languages. The website is being built in stages, to allow for prioritizing getting information out over getting information looking great. This website even actively uses <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr>.
               </p>
-              <p>
+              <p class="p">
                 <a href="news/2022_05_01-website_redesign.html" class="content link">Continue reading…</a>
               </p>
             </div>
