--- a/not_found.html
+++ b/not_found.html
@@ -73,7 +73,7 @@
           </header>
 
           <div class="main-content">
-            <p>
+            <p class="p">
               No content found at the requested path. Please go back or <a href="index.html" class="nav-text link">consider visiting to the site index page</a>.
             </p>
           </div>
