--- a/sources.html
+++ b/sources.html
@@ -83,11 +83,11 @@
               <h2 class="article-title h h2">Featureless Linux Library</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 The source code for the <strong>Featureless Linux Library</strong> is released in several locations.
                 The <a href="fll.html" class="link">Featureless Linux Library</a> page contains the full range of links regarding the source code.
               </p>
-              <p>
+              <p class="p">
                 The following represent the primary source code locations as well as backup locations at external websites:
               </p>
               <ul>
@@ -104,10 +104,10 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 The source code for the <strong>Turtle Kevux Distribution</strong> is provided in the DVD-ROM for each individual release. There currently is no recent release available. The legacy releases may be found on the <a href="distributions.html" class="link">distributions</a> page.
               </p>
-              <p>
+              <p class="p">
                 The following represents the most recently available release:
               </p>
               <ul>
@@ -123,10 +123,10 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 The source code for the <strong>Turtle Kevux Installation Scripts</strong> is provided both as separate downloads and in the DVD-ROM for each individual Turtle Kevux release. There currently is no recent release available. The legacy releases may be found on the <a href="distributions.html" class="link">distributions</a> page.
               </p>
-              <p>
+              <p class="p">
                 The following represents the most recently available release:
               </p>
               <ul>
@@ -143,16 +143,16 @@
             </header>
 
             <div class="article-content">
-              <p>
+              <p class="p">
                 The <strong>Kevux Website</strong> source code is also available for download. This website is designed to function even when downloaded, extracted, and viewed locally (without a web server hosting it). The downloaded version of this website will not contain the non-website related files nor will it contain the download website file itself. Such links will be broken on the downloaded website source. Check out the <a href="licenses.html" class="link">licenses</a> page for the license of the source code of this website.
               </p>
-              <p>
+              <p class="p">
                 The following is the link:
               </p>
               <ul>
                 <li><a href="documents/website/2022/kevux.org-2022_06_04.tar.gz" class="link download">kevux.org (2022/06/04)</a> (<a href="documents/website/2022/kevux.org-2022_06_04.tar.sha256" class="link download">SHA256</a>) (<a href="documents/website/2022/kevux.org-2022_06_04.tar.sign" class="link download">PGP</a>)</li>
               </ul>
-              <p>
+              <p class="p">
                 Most of the changes for this website are also made publicly available through repositories hosted on third-party websites and services.
                 To see a history of all of the changes or get the latest version of the website, visit any of these repositories.
               </p>
