--- a/documentation/control.html
+++ b/documentation/control.html
@@ -90,10 +90,10 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 The <strong>control</strong> program is a tool for sending commands to the <strong>controller</strong> program.
               </p>
-              <p>
+              <p class="p">
                 This tools is currently incomplete and is not guaranteed to work with the <strong>controller</strong> program. Further development will be made on this once the <strong>controller</strong> program is updated. The next development series is planned to focus on networking, which will include support for this.
               </p>
             </div>
@@ -164,10 +164,10 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
-              <p>
+              <p class="p">
                 The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
@@ -213,16 +213,16 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 When the <code class="code">--socket</code> parameter represents a directory path then the file name is generated from either the <code class="code">--name</code> parameter or from the control settings file.
               </p>
-              <p>
+              <p class="p">
                 A rule action allows for either the full rule path, such as '<code class="code">boot/root</code>' as a single parameter or two parameters with the first representing the rule directory path 'boot' and the second representing the rule base name '<code class="code">root</code>'.
               </p>
-              <p>
+              <p class="p">
                 The <code class="code">--return</code> parameter is intended to be used for scripting and is of the form "<code class="code">response [type] [action] [status]</code>".
               </p>
-              <p>
+              <p class="p">
                 Be sure to use the <code class="code">++quiet</code> parameter to suppress output when using this in scripting.
                 No response is returned on program errors, especially those errors that prevent communicating to the controller.
               </p>
