--- a/documentation/fss_identify.html
+++ b/documentation/fss_identify.html
@@ -90,13 +90,13 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 The <strong>fss_identify</strong> program is a tool for processing strings in an attempt to identify the <abbr title="Featureless Settings Specification">FSS</abbr> file format based on <abbr title="Featureless Settings Specification">FSS</abbr> header comments.
               </p>
-              <p>
+              <p class="p">
                 This program doesn't perforrm any special heuristic. It only checks for the special <abbr title="Featureless Settings Specification">FSS</abbr> header and reports what it finds.
               </p>
-              <p>
+              <p class="p">
                 This tool is designed to be scriptable but does not accept piped input.
               </p>
             </div>
@@ -167,10 +167,10 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
-              <p>
+              <p class="p">
                 The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
@@ -221,16 +221,16 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 The <code class="code">--line</code> parameter refers to the file lines and not the lines in a given file.
               </p>
-              <p>
+              <p class="p">
                 If neither the <code class="code">--object</code> nor <code class="code">--content</code> are specified, then the default behavior is to print both.
               </p>
-              <p>
+              <p class="p">
                 When specifying the <code class="code">--total</code> parameter, neither the <code class="code">--object</code> nor the <code class="code">--content</code> parameter may be specified.
               </p>
-              <p>
+              <p class="p">
                 An FSS file is identified by the format "<code class="code"># Object-Content</code>" where the Object, is a machine-name representing the name and may only consist of "word" characters and the Content is a 4-digit hexidecimal number representing a particular variant of the Object. This identifier, if provided, must exist on the first line in a file and must begin with the pound character: "<code class="code">#</code>". White space must follow this pound character. There may be multiple Object and Content pairs, separated by white space, such as: "<code class="code"># fss-0002 fss-0000 iki-0002</code>".
               </p>
             </div>
