--- a/documentation/utf8.html
+++ b/documentation/utf8.html
@@ -90,19 +90,19 @@
             </header>
 
             <div class="section-content">
-              <p>
+              <p class="p">
                 The <strong>UTF8</strong> program is a tool for converting from a <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte sequence to the Unicode code point. The byte sequence can also be referred to as the binary representation of the code even though the byte sequence is considered text. The term <em>"byte sequence"</em> here is used to refer to a sequence of bytes intended to represent something, which in this case is a Unicode character. The Unicode code point is the Unicode designation uniquely identifying that particular sequence. The Unicode code point is not specific to <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> and persists across different encodings, such as <abbr title="Unicode Transformation Format 16-bit">UTF-16</abbr>.
               </p>
-              <p>
+              <p class="p">
                 The idea behind the <strong>UTF8</strong> program is to provide the answer to the question of what some special <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> character is or to provide a way to create the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> character given the Unicode code point.
               </p>
-              <p>
+              <p class="p">
                 This tool is intended to be scriptable, should handle both piped data and files, and can convert entire files.
               </p>
-              <p>
+              <p class="p">
                 This tool can be used to validate a given byte sequence or can be used to get the character width of some byte sequence or code point.
               </p>
-              <p>
+              <p class="p">
                 This tool can be used to store binary data in a text-friendly format and then restore the binary data.
               </p>
             </div>
@@ -173,10 +173,10 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte sequence. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
-              <p>
+              <p class="p">
                 The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
@@ -262,19 +262,19 @@
                   </tbody>
                 </table>
               </div>
-              <p>
+              <p class="p">
                 This program establishes a pattern for some of the parameters. The parameters that represent a <em>"from"</em> use lower case short characters and the parameters that represent a <em>"to"</em> use upper case short characters. For short parameters that have both a <em>"from"</em> and a <em>"to"</em>, they use the same character with their case being different.
               </p>
-              <p>
+              <p class="p">
                 The default behavior is to assume the expected input is byte sequence from the command line to be output to the screen as codepoints.
               </p>
-              <p>
+              <p class="p">
                 Multiple input sources are allowed but only a single output destination is allowed.
               </p>
-              <p>
+              <p class="p">
                 When using the parameter <code class="code">--verify</code>, no data is printed and 0 is returned if valid or 1 is returned if invalid.
               </p>
-              <p>
+              <p class="p">
                 When using the parameter <code class="code">--to_combining</code> with the parameter <code class="code">--to_width</code>, the 'C' character is printed to represent the combining and the digits are used to represent widths. The combining characters should be considered 1-width by themselves or 0-width when combined.
               </p>
             </div>
