--- a/projects.html
+++ b/projects.html
@@ -141,13 +141,13 @@
               <h2 class="article-title h h2">Programs</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 The Featureless Linux Library is a major project and has several sub-parts, including several programs. The <abbr title="Featureless Linux Library">FLL</abbr> is broken up into multiple sub-projects that are libraries themselves or programs. This page describes those programs from <abbr title="Featureless Linux Library">FLL</abbr> as well as any other programs and projects associated with Kevux Systems or Kevin Day.
               </p>
-              <p>
+              <p class="p">
                 Of particular note is that most, if not all, of the Kevux Systems programs are written to provide an <abbr title="Application Programming Interface">API</abbr> (and its respective <abbr title="Application Binary Interface">ABI</abbr>). This allows the programs themselves to be used as a library.
               </p>
-              <p>
+              <p class="p">
                 The programs themselves follow <abbr title="Featureless Linux Library">FLL</abbr> design principles on making the interface human-friendly. Software should be a tool for humans, and not a tool for machines.
               </p>
             </div>
@@ -158,7 +158,7 @@
               <h2 class="article-title h h2">Byte Dump</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This tool is a nifty way to get a <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> friendly <code class="code">hexdump</code> alternative.<br>
                 The output is intended to honor some of the feel of hexdump but do so in an <abbr title="Featureless Linux Library">FLL</abbr> way.
               </p>
@@ -170,7 +170,7 @@
               <h2 class="article-title h h2">Control</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This project is not complete and development is planned for the <abbr title="Featureless Linux Library">FLL</abbr> 0.7 development series.<br>
                 <br>
                 The goal of this is to communicate with the "Controller" program, such as starting or stopping services.
@@ -183,14 +183,14 @@
               <h2 class="article-title h h2">Controller</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This project is not complete and development is planned for the <abbr title="Featureless Linux Library">FLL</abbr> 0.7 development series.
               </p>
-              <p>
+              <p class="p">
                 The goal of this is to provide task and service management similar to sysvinit, initng, and systemd.<br>
                 This is designed to be used for booting the system as if it were <code class="code">/sbin/init</code>.
               </p>
-              <p>
+              <p class="p">
                 This should be controllable from user-space via the "Control" program.
               </p>
             </div>
@@ -201,35 +201,35 @@
               <h2 class="article-title h h2">Featureless Make</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 The Featureless Make is the original program and goal of the <abbr title="Featureless Linux Library">FLL</abbr>.<br>
                 The GNU Make, Autoconf, and all those build processes are unnecessarily complex.
               </p>
-              <p>
+              <p class="p">
                 A major problem with these build systems is that they try to manage installation as well as compilation.<br>
                 A build system should be just that a build system.<br>
                 Trying to handle how the built package gets installed should be done by system administrators or distributors.<br>
                 By avoiding this, the code becomes simpler, more "featureless", easier to maintain, and easier to hack.
               </p>
-              <p>
+              <p class="p">
                 The Featureless Make, also called Fake, provides two primary ways to compile C, C++, and possibly other compiled languages:
               </p>
               <ul>
                 <li>Using the "build" command.</li>
                 <li>Using the "make" command.</li>
               </ul>
-              <p>
+              <p class="p">
                 The build command is as simple as it can be and follows a Featureless Settings Specification (FSS).<br>
                 The make command (and its respective fakefile) provides a more advanced interface for handling complex build processes or compiling languages other than C/C++.
               </p>
-              <p>
+              <p class="p">
                 The build command (and subsequently the make command) currently provide some hard coded program settings, such as the indexer "ar" runs ar rcs.<br>
                 Eventually such things will be expanded into an FSS setting and made customizable.
               </p>
-              <p>
+              <p class="p">
                 Both the build and make commands support a small subset of make and autoconf functionality to make transitioning easier or make it easy to work alongside make and autoconf.
               </p>
-              <p>
+              <p class="p">
                 To help with understanding and using the Featureless Make program, fully functional example build settings and fakefiles are created for the program bzip (specifically version 1.0.8):
               </p>
               <ul>
@@ -237,13 +237,13 @@
                 <li><a href="https://sourceforge.net/p/fll/git/ci/development/tree/level_3/fake/data/projects/bzip2/1.0.8/settings-bzip2" class="link external">https://sourceforge.net/p/fll/git/ci/development/tree/level_3/fake/data/projects/bzip2/1.0.8/settings-bzip2</a></li>
                 <li><a href="https://sourceforge.net/p/fll/git/ci/development/tree/level_3/fake/data/projects/bzip2/1.0.8/settings-bzip2recover" class="link external">https://sourceforge.net/p/fll/git/ci/development/tree/level_3/fake/data/projects/bzip2/1.0.8/settings-bzip2recover</a></li>
               </ul>
-              <p>
+              <p class="p">
                 There is also a fakefile pre-configured to run GNU Make within itself to compile the Linux kernel fom source:
               </p>
               <ul>
                 <li><a href="https://sourceforge.net/p/fll/git/ci/development/tree/level_3/fake/data/build/fakefile-example-linux_using_make" class="link external">https://sourceforge.net/p/fll/git/ci/development/tree/level_3/fake/data/build/fakefile-example-linux_using_make</a></li>
               </ul>
-              <p>
+              <p class="p">
                 Bzip2 may be found here:
               </p>
               <ul>
@@ -257,7 +257,7 @@
               <h2 class="article-title h h2">Firewall</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is one of the earliest proof of concept and functional example of the FLL library.<br>
                 Now it is currently outdated, but it still remains operational as an iptables wrapper.<br>
                 This program is actively used on the Turtle Kevux distribution.<br>
@@ -271,7 +271,7 @@
               <h2 class="article-title h h2">FSS Identify</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program reading a file and determining what Featureless Settings Specification.<br>
                 This only detects files that provide an <abbr title="Featureless Settings Specification">FSS</abbr> header.
               </p>
@@ -283,7 +283,7 @@
               <h2 class="article-title h h2">FSS Basic Read</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0000 (Basic).<br>
                 This performs read operations related to the FSS-0000 (Basic) standard.
               </p>
@@ -295,7 +295,7 @@
               <h2 class="article-title h h2">FSS Basic Write</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0000 (Basic).<br>
                 This performs write operations related to the FSS-0002 (Basic) standard.
               </p>
@@ -307,7 +307,7 @@
               <h2 class="article-title h h2">FSS Basic List Read</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0002 (Basic List).<br>
                 This performs read operations related to the FSS-0002 (Basic List) standard.
               </p>
@@ -319,7 +319,7 @@
               <h2 class="article-title h h2">FSS Basic List Write</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0002 (Basic List).<br>
                 This performs write operations related to the FSS-0002 (Basic List) standard.
               </p>
@@ -331,7 +331,7 @@
               <h2 class="article-title h h2">FSS Embedded List Read</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0008 (Embedded List).<br>
                 This performs read operations related to the FSS-0008 (Embedded List) standard.
               </p>
@@ -343,7 +343,7 @@
               <h2 class="article-title h h2">FSS Embedded List Write</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0008 (Embedded List).<br>
                 This performs write operations related to the FSS-0008 (Embedded List) standard.
               </p>
@@ -355,7 +355,7 @@
               <h2 class="article-title h h2">FSS Extended Read</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0001 (Extended).<br>
                 This performs read operations related to the FSS-0001 (Extended) standard.
               </p>
@@ -367,7 +367,7 @@
               <h2 class="article-title h h2">FSS Extended Write</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0001 (Extended).<br>
                 This performs write operations related to the FSS-0001 (Extended) standard.
               </p>
@@ -379,7 +379,7 @@
               <h2 class="article-title h h2">FSS Extended List Read</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0003 (Extended List).<br>
                 This performs read operations related to the FSS-0003 (Extended List) standard.
               </p>
@@ -391,7 +391,7 @@
               <h2 class="article-title h h2">FSS Extended List Write</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-0003 (Extended List).<br>
                 This performs write operations related to the FSS-0003 (Extended List) standard.
               </p>
@@ -403,11 +403,11 @@
               <h2 class="article-title h h2">FSS Payload Read</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-000E (Payload).<br>
                 This performs read operations related to the FSS-000E (Payload) standard.<br>
-              <p>
-              <p>
+              <p class="p">
+              <p class="p">
                 The FSS-000E (Payload) is focused on network communication and is intended to be used inside a network packet.<br>
                 This program can be used to manually read a network packet or data from the network.
               </p>
@@ -419,11 +419,11 @@
               <h2 class="article-title h h2">FSS Payload Write</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This is a program implementing the Featureless Settings Specification FSS-000E (Payload).<br>
                 This performs write operations related to the FSS-000E (Payload) standard.<br>
-              <p>
-              <p>
+              <p class="p">
+              <p class="p">
                 The FSS-000E (Payload) is focused on network communication and is intended to be used inside a network packet.<br>
                 This program can be used to manually write the payload portion of a network packet.
               </p>
@@ -435,11 +435,11 @@
               <h2 class="article-title h h2">FSS Status Code</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This program is designed to interpret status codes returned by any <abbr title="Featureless Settings Specification">FSS</abbr> program.<br>
                 The status codes are converted to or from a code and a label.
               </p>
-              <p>
+              <p class="p">
                 This program handles more status codes that the <code class="code">status_code</code> program.
               </p>
             </div>
@@ -450,11 +450,11 @@
               <h2 class="article-title h h2">Status Code</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 This program is designed to interpret status codes returned by any <abbr title="Featureless Linux Libray">FLL</abbr> based program.<br>
                 The status codes are converted to or from a code and a label.
               </p>
-              <p>
+              <p class="p">
                 This program specifically handles only the core status codes provided by the <abbr title="Featureless Linux Library">FLL</abbr>.<br>
                 Other programs that utilize custom status codes should provide their own implementation of this program, such as is done with the <strong>FSS Status Code</strong> program.
               </p>
@@ -466,16 +466,16 @@
               <h2 class="article-title h h2">IKI Read</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 Similar to the FSS Read programs, this is a program implementing the Featureless Settings Specification IKI-0000 (Unrestricted).<br>
                 This performs read operations related to the Unrestricted IKI standard (IKI-0000).<br>
-              <p>
-              <p>
+              <p class="p">
+              <p class="p">
                 The IKI settings specification plays on how it is simpler than a Wiki syntax.<br>
                 The IKI could be used for anything from e-mails and text-messages to word-processors.<br>
                 The goal with IKI is to be very easily readably by a human, such as: <code class="code">iki:"example"</code> or <code class="code">url:"https://sourceforge.net/projects/fll/"</code>.
               </p>
-              <p>
+              <p class="p">
                 This program is a swiss army knife for reading files that contain IKI syntax.
               </p>
             </div>
@@ -486,16 +486,16 @@
               <h2 class="article-title h h2">IKI Write</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 Similar to the FSS Write programs, this is a program implementing the Featureless Settings Specification IKI-0000 (Unrestricted).<br>
                 This performs write operations related to the Unrestricted IKI standard (IKI-0000).<br>
-              <p>
-              <p>
+              <p class="p">
+              <p class="p">
                 The IKI settings specification plays on how it is simpler than a Wiki syntax.<br>
                 The IKI could be used for anything from e-mails and text-messages to word-processors.<br>
                 The goal with IKI is to be very easily readably by a human, such as: <code class="code">iki:"example"</code> or <code class="code">url:"https://sourceforge.net/projects/fll/"</code>.
               </p>
-              <p>
+              <p class="p">
                 This program is a swiss army knife for writing files that contain IKI syntax.
               </p>
             </div>
@@ -506,10 +506,10 @@
               <h2 class="article-title h h2">UTF8</h2>
             </header>
             <div class="article-content">
-              <p>
+              <p class="p">
                 A tool to convert one or more <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> characters from the codepoint representation to a binary representation and back.
               </p>
-              <p>
+              <p class="p">
                 This program can convert complete files into a text file of <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> bytecode values.<br>
                 This program can convert complete files into a text file of space separated codepoint values.
               </p>
